styles/global.css
/* font-family: 'Montserrat', sans-serif; */

:root {
  --check-gray: #fff;
}

*,
html,
body {
  margin: 0;
  padding: 0;
  max-width: 100vw;
  /* overflow-x: hidden; */
}

body,
.content,
.content-container .section {
  overflow-x: hidden;
}

.pocetna {
  overflow-x: hidden;
}

.flex {
  display: flex;
}

/* #f5f6f6  HEADING -- #9b9c9f FONT-COLOR*/

a {
  color: #9b9c9f;
  text-decoration: none;
  font-family: "Oswald", sans-serif;
}

ul {
  list-style: none;
}

.content-container {
  background-image: url("../assets/pocetna/pozadina1.jpg");
  height: auto;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 1;
  position: relative;
}

.web-dizajn {
  background-image: url("../assets/web-dizajn/pozadina1.jpg");
  overflow-x: hidden;
}

.graficki-dizajn {
  background-image: url("../assets/graficki-dizajn/pozadina1.jpg");
}

.video-animacija {
  background-image: url("../assets/video-animacija/pozadina1.jpg");
}

.content {
  width: 80%;
  margin: auto;
}

.section {
  display: flex;
  justify-content: space-between;
  height: auto;
  align-items: center;
  gap: 2em;
  padding-top: 8em;
  padding-bottom: 8em;
  overflow-y: hidden;
  z-index: 0;
}

.animation-container {
  height: 450px;
  position: relative;
  flex: 1;
  overflow: visible;
}

.animation-image {
  position: absolute;
  z-index: 500;
}

.text {
  flex: 1;
  padding-top: 5em;
}

.text h2 {
  color: #f8af4e;
  font-size: 48px;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-family: "Oswald", sans-serif;
  letter-spacing: 3px;
}

.text p {
  font-size: 24px;
  margin-top: 25px;
  color: #474849;
  font-family: "Archivo", sans-serif;
}

.text:nth-child(odd) {
  text-align: right;
}

.center img {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.splide__slide img {
  width: 100%;
  height: auto;
}

.container-graphic {
  background-image: url("../assets/logoi/graphic/orange.jpg");
}

.container-web {
  background-image: url("../assets/logoi/web/blue.jpg");
}

.container-animation {
  background-image: url("../assets/logoi/video/purple.jpg");
}

.splide__slide {
  height: 100vh;
}

.container-slider {
  position: relative;
  min-width: 100vw;
  min-height: 100vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  z-index: -11;
}

.tdlogo {
  height: 100%;
  width: 100%;
  overflow: hidden;
  position: fixed;
  z-index: 1;
}

.nav-links {
  padding-top: 15px;
  gap: 30px;
  font-size: 20px;
  margin-left: 50px;
  position: relative;
}

.navigation {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  transition: 0.6s;
  padding-top: 25px;
  padding-bottom: 15px;
  padding-left: 90px;
  padding-right: 90px;
  justify-content: space-between;
  z-index: 10;
  box-sizing: border-box;
  font-family: "Oswald", sans-serif;
}

.sticky {
  background-color: #f5f6f6;
  border: 1px solid rgba(0, 0, 0, 0.09);
  box-shadow: 0 4px 8px -1px gray;
  width: 100%;
  box-sizing: border-box;
}
.sticky .link .col {
  color: #9b9c9f;
}
.sticky .social-lang .lang .col {
  color: #9b9c9f;
}

.logo img {
  width: 200px;
  height: auto;
  position: relative;
}

.social-lang {
  margin-top: 10px;
  gap: 30px;
  position: relative;
  align-items: center;
}

.social {
  gap: 10px;
  position: relative;
}

.social a img {
  width: 30px;
  position: relative;
}

.lang a {
  font-family: "Montserrat", sans-serif;
  /* color: #9b9c9f; */
  color: #ffffff;
  font-size: 28px;
  flex-direction: column;
  position: relative;
}

.logo-links {
  position: relative;
  transition: 0.6s;
}

.links-container {
  position: relative;
}

.nav-links li a {
  position: relative;
  color: #ffffff;
  transition: 0.6s;
  font-family: "Oswald", sans-serif;
}

.lang {
  flex-direction: column;
  align-items: center;
}

.footer {
  padding: 80px 50px 50px 50px;
  background-color: #ececed;
  gap: 4em;
  align-items: center;
  font-family: "Oswald", sans-serif;
}

.logo-social {
  flex-direction: column;
  min-width: 500px;
}

.big-logo {
  width: 500px;
}

.logo-social p {
  font-size: 24px;
  color: #797a7b;
  font-family: "Oswald", sans-serif;
}

.details {
  justify-content: space-around;
  gap: 5em;
  width: 100%;
}

.section-details h4 {
  color: #797a7b;
  font-family: "Oswald", sans-serif;
  font-size: 20px;
}

.vertical-line {
  display: inline-block;
  border-left: 2px solid #47484955;
  margin: 0 10px;
  height: 250px;
}

.section-details ul li {
  margin-top: 10px;
}

.section-details ul li p {
  font-family: "Archivo", sans-serif;
  font-size: 16px;
  color: #797a7b;
}

.social-footer {
  gap: 20px;
  justify-content: center;
  margin-top: 30px;
}

.social-footer img {
  width: 40px;
}

.ocean-left {
  height: 100%;
  width: 3%;
  position: absolute;
  bottom: 0;
  left: 0;
  overflow: hidden;
}

.ocean-right {
  height: 100%;
  width: 3%;
  position: absolute;
  bottom: 0;
  right: 0;
  overflow: hidden;
}

.wave-right {
  background: url("../assets/svg/purplesvg.svg") repeat-y;
  position: absolute;
  width: 120px;
  height: 6000px;
  left: -20px;
  animation: wave 30s linear infinite;
  transform: translate3d(0, 0, 0);
  overflow-y: hidden;
}

.wave-left {
  background: url("../assets/svg/blue.svg") repeat-y;
  position: absolute;
  width: 120px;
  height: 6000px;
  left: -50px;
  animation: wave 30s linear infinite;
  transform: translate3d(0, 0, 0);
  transform: rotate(180deg);
  overflow-y: hidden;
}

@keyframes wave {
  0% {
    margin-top: 0;
  }
  50% {
    margin-top: -500px;
  }
  100% {
    margin-top: 0;
  }
}

.saznaj-vise {
  position: absolute;
  bottom: 150px;
  left: 50%;
  transform: translate(-50%, 0);
  border-radius: 25px;
  border: 4px solid #fff;
  padding: 8px 25px;
  z-index: 20000;
}

.saznaj-vise a {
  color: #fff;
  font-size: 28px;
  font-family: "Oswald", sans-serif;
}

.display {
  display: none;
}

.web-image {
  width: 67.78%;
  height: 121.11%;
}

.active-lang {
  position: relative;
}

.active-lang::after {
  content: "";
  position: absolute;
  width: 10px;
  height: 10px;
  background-color: var(--check-gray);
  border-radius: 25px;
  top: 30.3%;
  right: -20px;
}

@media only screen and (max-width: 1366px) {
  .content {
    width: 90%;
  }
  .text h2 {
    font-size: 32px;
  }
  .text p {
    font-size: 18px;
  }
  .animation-container {
    height: 370px;
  }
  .section {
    padding-top: 4em;
    padding-bottom: 4em;
  }
  .navigation {
    padding-left: 40px;
    padding-right: 40px;
  }
  .nav-links {
    gap: 20px;
    font-size: 18px;
    margin-left: 40px;
  }
  .social-lang {
    margin-top: 5px;
    gap: 25px;
  }
  .lang a {
    font-size: 20px;
  }
  .footer {
    padding-top: 30px;
    padding-bottom: 10px;
    gap: 2em;
  }

  .logo-social {
    min-width: 400px;
  }
  .logo-social p {
    font-size: 18px;
  }
  .details {
    justify-content: space-evenly;
    gap: 50px;
  }
  .section-details {
    white-space: nowrap;
  }
  .section-details h4 {
    font-size: 16px;
  }
  .section-details ul li p {
    font-size: 14px;
  }
  .big-logo {
    width: 400px;
  }
  .saznaj-vise {
    bottom: 50px;
  }
}

@media only screen and (max-width: 1200px) {
  .animation-container {
    height: 300px;
  }
  .footer {
    padding-top: 30px;
    padding-bottom: 10px;
    padding-left: 10px;
    padding-right: 10px;
    gap: 2em;
  }

  .logo-social {
    min-width: 350px;
  }
  .logo-social p {
    font-size: 16px;
    text-align: center;
  }
  .details {
    justify-content: space-evenly;
    gap: 40px;
  }
  .section-details {
    white-space: nowrap;
  }
  .section-details h4 {
    font-size: 14px;
  }
  .section-details ul li p {
    font-size: 12px;
  }
  .big-logo {
    width: 350px;
  }
}

@media only screen and (max-width: 1024px) {
  .animation-container {
    height: 250px;
  }
  .big-logo {
    width: 320px;
  }
  .vertical-line {
    margin: 0;
    height: 200px;
  }
  .footer {
    gap: 1em;
  }
  .social-footer img {
    width: 30px;
  }
  .text h2 {
    font-size: 24px;
  }
  .text p {
    font-size: 14px;
  }
  .section {
    padding-bottom: 2em;
    padding-top: 2em;
    gap: 1em;
  }
}

@media only screen and (max-width: 767px) {
  .animation-container {
    height: 200px;
  }
  .big-logo {
    width: 200px;
  }
  .vertical-line {
    margin: 0;
    height: 180px;
  }
  .footer {
    gap: 10px;
  }
  .logo-social {
    min-width: 250px;
    align-items: center;
  }
  .social-footer img {
    width: 25px;
  }
  .social-footer {
    margin-top: 20px;
  }
  .text h2 {
    font-size: 18px;
  }
  .text p {
    font-size: 12px;
  }
  .section {
    padding-bottom: 2em;
    padding-top: 2em;
    gap: 1em;
  }
  .details {
    gap: 20px;
  }
  .section-details h4 {
    font-size: 12px;
  }
  .section-details ul li p {
    font-size: 10px;
  }
  .logo img {
    width: 130px;
  }
  .a-link {
    font-size: 14px;
  }
  .nav-links {
    gap: 10px;
    margin-left: 20px;
  }
  .social a img {
    width: 20px;
  }
  .navigation {
    justify-content: space-around;
  }
}

